--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cupertino_icons: ^1.0.5
   phosphor_flutter: ^2.1.0
   get: ^4.7.2
+  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
@@ -52,9 +53,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+     - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
