--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   phosphor_flutter: ^2.1.0
   get: ^4.7.2
   google_fonts: ^6.3.2
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
