--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   get: ^4.7.2
   google_fonts: ^6.3.2
   shared_preferences: ^2.5.3
+  flutter_onboarding_slider: ^1.0.11
 
 dev_dependencies:
   flutter_lints: '>=3.0.0 <7.0.0'
