--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_onboarding_slider: ^1.0.11
   smooth_page_indicator: ^1.2.1
+  fl_chart: ^1.1.1
   
 
 dev_dependencies:
