Api url definition

--- a/credit_wise_server/.gitignore
+++ b/credit_wise_server/.gitignore
@@ -11,5 +11,8 @@ doc/api/
 # Passwords file
 config/passwords.yaml
 
+# API keys
+config/app/config.json
+
 # Firebase service account key for Firebase auth
 config/firebase_service_account_key.json
