--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_onboarding_slider: ^1.0.11
   smooth_page_indicator: ^1.2.1
   fl_chart: ^1.1.1
+  encrypt: ^5.0.3
   
 
 dev_dependencies:
@@ -60,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
      - assets/
+     - config/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
