--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   smooth_page_indicator: ^2.0.1
   fl_chart: ^1.1.1
   encrypt: ^5.0.3
+  flutter_screenutil: ^5.9.3
   
 
 dev_dependencies:
