Database filed acceptance of text input

--- a/credit_wise_server/lib/src/models/user.spy.yaml
+++ b/credit_wise_server/lib/src/models/user.spy.yaml
@@ -7,5 +7,5 @@ fields:
     email: String
     phoneNumber: int
     password: String
-    gender: Gender
+    gender: String
     createdAt: DateTime
