Relationship addition to user model

--- a/credit_wise_server/lib/src/models/user.spy.yaml
+++ b/credit_wise_server/lib/src/models/user.spy.yaml
@@ -9,3 +9,7 @@ fields:
     password: String
     gender: String
     createdAt: DateTime
+indexes:
+  phone_number_unique:
+    fields: phoneNumber
+    unique: true
