--- a/credit_wise_server/pubspec.yaml
+++ b/credit_wise_server/pubspec.yaml
@@ -7,11 +7,12 @@ environment:
   sdk: '>=3.5.0 <4.0.0'
 
 dependencies:
-  serverpod: 3.2.1
+  serverpod: 3.2.3
   bcrypt: ^1.1.3
+  serverpod_auth_server: ^3.2.3
 
 dev_dependencies:
   lints: '>=3.0.0 <7.0.0'
   test: '^1.24.2'
-  serverpod_test: 3.2.1
+  serverpod_test: 3.2.3
 
