--- a/credit_wise_server/lib/src/models/user.spy.yaml
+++ b/credit_wise_server/lib/src/models/user.spy.yaml
@@ -1,6 +1,7 @@
 class: Users
 table: auth_user
 fields:
+    userId: int, relation(parent=serverpod_user_info)
     firstName: String
     secondName: String
     lastName: String
