--- a/credit_wise_flutter/pubspec.yaml
+++ b/credit_wise_flutter/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter:
     sdk: flutter
   serverpod_flutter: 3.2.3
+  serverpod_auth_client: ^3.2.3
+  serverpod_auth_shared_flutter: ^3.2.3
   credit_wise_client:
     path: ../credit_wise_client
 
