Credit and loan prediction models

--- a/credit_wise_server/lib/src/models/profile_data.spy.yaml
+++ b/credit_wise_server/lib/src/models/profile_data.spy.yaml
@@ -7,3 +7,5 @@ fields:
     monthlyIncome: double
     debtRatio: double
     contributorIncome: double
+
+    #user: Users?, relation(name=auth_user)
